# otterlang

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  flake.nix  roadmap.md  setup.ps1  test_stdlib.otter
.github/workflows/: ci.yml
.otter/: cli-autoupdate.stamp
compiler/otterc_lexer/: Cargo.toml
compiler/otterc_lexer/src/: error.rs  lib.rs
compiler/otterc_lexer/src/token/: kind.rs  mod.rs
compiler/otterc_span/: Cargo.toml
compiler/otterc_span/src/: lib.rs
compiler/otterc_span/src/span/: mod.rs
crates/ast/src/: nodes.rs
crates/common/src/: lib.rs  span.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: cargo_bridge.rs  dynamic_loader.rs  lib.rs  metadata.rs  rust_stubgen.rs  rustdoc_extractor.rs  symbol_registry.rs  types.rs
crates/fmt/src/: formatter.rs
crates/lexer/src/: token.rs  tokenizer.rs
crates/module/src/: processor.rs
crates/otterc_ast/: Cargo.toml
crates/otterc_ast/src/: nodes.rs
crates/otterc_cache/: Cargo.toml
crates/otterc_codegen/: Cargo.toml
crates/otterc_config/: Cargo.toml
crates/otterc_ffi/: Cargo.toml
crates/otterc_ident/: Cargo.toml
crates/otterc_ident/src/: lib.rs
crates/otterc_jit/: Cargo.toml
crates/otterc_lexer/: Cargo.toml
crates/otterc_lexer/src/: consts.rs  error.rs  lexeme.rs  lib.rs  token.rs  tokenizer.rs
crates/otterc_metrics/: Cargo.toml
crates/otterc_module/: Cargo.toml
crates/otterc_parser/: Cargo.toml
crates/otterc_parser/src/: grammar.rs  lib.rs  parser_extensions.rs  token_stream.rs
crates/otterc_parser/src/expr/: call.rs  member_access.rs  mod.rs
crates/otterc_parser/src/literal/: bool.rs  mod.rs  number.rs  string.rs  unit.rs
crates/otterc_parser/src/pattern/: array.rs  enum_variant.rs  mod.rs  struct.rs  wildcard.rs
crates/otterc_runtime/: Cargo.toml
crates/otterc_symbol/: Cargo.toml
crates/otterc_typecheck/: Cargo.toml
crates/otterc_utils/: Cargo.toml
crates/parser/src/: grammar.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: error.rs  ffi.rs  ffi_api.rs  lib.rs  strings.rs
crates/runtime/src/jit/: engine.rs  executor.rs
crates/runtime/src/jit/cache/: function_cache.rs
crates/runtime/src/jit/optimization/: inliner.rs  reoptimizer.rs
crates/runtime/src/jit/specialization/: mod.rs  specializer.rs
crates/runtime/src/memory/: gc.rs
crates/runtime/src/stdlib/: builtins.rs  fmt.rs  io.rs  json.rs  math.rs  net.rs  rand.rs  runtime.rs  sync.rs  sys.rs  task.rs  time.rs
docs/: API_REFERENCE.md  GETTING_STARTED.md  LANGUAGE_SPEC.md  ROADMAP.md  STDLIB.md  TUTORIALS.md
examples/: benchmark.sh  demo.otter  pi_leibniz.otter  pi_leibniz_c  pi_leibniz_otter  pi_leibniz_rust  pi_simple.otter
examples/basic/: advanced_pipeline.ot  advanced_pipeline.otter  exception_advanced.ot  exception_advanced.otter  exception_basics.ot  exception_resource.ot  exception_validation.ot  fibonacci.ot  gc_test.ot  hello.ot  multiline_test.ot  pythonic_demo.ot  pythonic_demo.otter  string_concat.ot  struct_demo.ot  struct_demo.otter  struct_methods_demo.ot  struct_methods_demo.otter  task_benchmark.ot  task_benchmark.otter
examples/benchmarks/: pi_leibniz.ot
examples/ffi/: ffi_rand_advanced.ot  ffi_rand_demo.ot  test_ffi_struct.ot
src/: cli.rs  lib.rs
src/ast/: nodes.rs
src/cache/: manager.rs  mod.rs
src/codegen/: llvm.rs  target.rs
src/codegen/cranelift/: lowering.rs
src/codegen/llvm/: build.rs  compiler.rs  config.rs  mod.rs
src/codegen/llvm/compiler/: expr.rs  mod.rs  stmt.rs  types.rs
src/ffi/: cargo_bridge.rs  rustdoc_extractor.rs
src/fmt/: formatter.rs
src/lexer/: token.rs  tokenizer.rs
src/lsp/: mod.rs
src/parser/: grammar.rs
src/repl/: engine.rs
src/runtime/: config.rs  error.rs  ffi.rs  introspection.rs  mod.rs  strings.rs  symbol_registry.rs
src/runtime/jit/: engine.rs  executor.rs  tiered_compiler.rs
src/runtime/jit/cache/: mod.rs
src/runtime/jit/optimization/: inliner.rs  reoptimizer.rs
src/runtime/jit/profiler/: compilation_profiler.rs
src/runtime/jit/specialization/: constant_prop.rs  key.rs  mod.rs  specializer.rs  type_tracker.rs
src/runtime/memory/: config.rs  gc.rs  mod.rs
src/runtime/stdlib/: builtins.rs  enums.rs  fmt.rs  gc.rs  mod.rs  test.rs
src/typecheck/: checker.rs  types.rs  workspace.rs
stdlib/otter/: builtins.ot  fmt.otter
tests/: parser_tests.rs  string_concat.ot
