[package]
name = "otterc_ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
otterc_cache.path = "../otterc_cache"
otterc_symbol.path = "../otterc_symbol"

serde.workspace = true
abi_stable.workspace = true
anyhow.workspace = true
libloading.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
inventory.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

sha1 = "0.10"
cargo_metadata = "0.18"
duct = "0.13"

[lints]
workspace = true
