[package]
name = "otterc_jit"
version = "0.1.0"
edition = "2024"

[dependencies]
otterc_ast.path = "../otterc_ast"
otterc_codegen.path = "../otterc_codegen"
otterc_config.path = "../otterc_config"
otterc_metrics.path = "../otterc_metrics"
otterc_symbol.path = "../otterc_symbol"
otterc_typecheck.path = "../otterc_typecheck"

ahash.workspace = true
anyhow.workspace = true
inkwell.workspace = true
libloading.workspace = true
serde.workspace = true
parking_lot.workspace = true
tempfile.workspace = true
sysinfo.workspace = true
rayon.workspace = true

crossbeam-channel = "0.5"

[lints]
workspace = true
