[package]
name = "otterc_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
otterc_span.path = "../otterc_span"
otterc_lexer.path = "../otterc_lexer"
otterc_utils.path = "../otterc_utils"
otterc_ast.path = "../otterc_ast"
otterc_ident.path = "../otterc_ident"

winnow = { version = "0.7.14", features = ["simd"] }
thiserror = "2"

[lints]
workspace = true
