[package]
name = "otterc_runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []
task-runtime = []
toml-config = ["dep:toml"]
ffi-main = []

[dependencies]
otterc_config.path = "../otterc_config"
otterc_ffi.path = "../otterc_ffi"
otterc_metrics.path = "../otterc_metrics"
otterc_symbol.path = "../otterc_symbol"

anyhow.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
sysinfo.workspace = true
inventory.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
libc.workspace = true
ureq.workspace = true
tokio.workspace = true

toml = { version = "0.8", optional = true }
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
libm = "0.2"

[lints]
workspace = true
