[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[features]
task-runtime = []

[dependencies]
ast.path = "../ast"
cache.path = "../cache"
common.path = "../common"
# DOES NOT EXIST YET
# codegen.path = "../codegen"
# typecheck.path = "../typecheck"

abi_stable = "0.11"
ahash = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
anyhow = "1.0"
sha1 = "0.10"
cargo_metadata = "0.18"
tracing = "0.1"
libloading = "0.8"
inventory = "0.3"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
sysinfo = "0.30"
crossbeam-channel = "0.5"
inkwell = { version = "0.x", features = ["llvm18-1"] }
tempfile = "3.10"
serde_json = "1.0"
libm = "0.2"
chrono = { version = "0.4", features = ["serde"] }
duct = "0.13"
